fix: header z-index issue

--- a/css/styles.css
+++ b/css/styles.css
@@ -56,7 +56,7 @@ header {
   width: 100%;
   top: 4px;
   box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
-  z-index: 100;
+  z-index: 7;
   /* outline: dashed red; */
 }
 
